spacing issue fixed

--- a/src/css/view/business-reviews.scss
+++ b/src/css/view/business-reviews.scss
@@ -1,4 +1,7 @@
 .eael-business-reviews-wrapper {
+    .eael-business-reviews-items {
+        padding: 0 15px;
+    }
     .preset-2 {
         .preset-content-wrap {
             border: 1px solid #f5f5f5;
